force-app/main/default/objects/Instance_Details__c/Instance_Details__c.object-meta.xml
<CustomObject>
    <label>Instance Detail</label>
    <nameField>
        <label>Instance Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Instance Details</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>