force-app/main/default/objects/Instance_Details__c/fields/BAA__c.field-meta.xml
<CustomField>
    <fullName>BAA__c</fullName>
    <description>Checkbox for Business Associate Agreement</description>
    <defaultValue>false</defaultValue>
    <label>BAA</label>
    <type>Checkbox</type>
</CustomField>