force-app/main/default/objects/Instance_Details__c/fields/Clarity_Facility_Password__c.field-meta.xml
<CustomField>
    <fullName>Clarity_Facility_Password__c</fullName>
    <description>Password of &quot;Facility&quot; Clarity user</description>
    <label>Clarity Facility Password</label>
    <length>170</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>