force-app/main/default/objects/Instance_Details__c/fields/Clarity_Portal_URL__c.field-meta.xml
<CustomField>
    <fullName>Clarity_Portal_URL__c</fullName>
    <description>URL system is hosted at</description>
    <label>Clarity Portal URL</label>
    <type>Url</type>
</CustomField>