force-app/main/default/objects/Instance_Details__c/fields/Clarity_Server_OS__c.field-meta.xml
<CustomField>
    <fullName>Clarity_Server_OS__c</fullName>
    <description>Operating system installed</description>
    <label>Clarity Server OS</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>RedHat Enterprise Linux 6.5</fullName>
            </value>
            <value>
                <fullName>RedHat Enterprise Linux 6.6</fullName>
            </value>
            <value>
                <fullName>RedHat Enterprise Linux 6.7</fullName>
            </value>
            <value>
                <fullName>RedHat Enterprise Linux 6.8</fullName>
            </value>
            <value>
                <fullName>RedHat Enterprise Linux 6.9</fullName>
            </value>
            <value>
                <fullName>RHEL 6.10</fullName>
            </value>
            <value>
                <fullName>RHEL 7.6</fullName>
            </value>
            <value>
                <fullName>RHEL 7.7</fullName>
            </value>
            <value>
                <fullName>RHEL 7.8</fullName>
            </value>
            <value>
                <fullName>RHEL 7.9</fullName>
            </value>
            <value>
                <fullName>CentOS 6.5</fullName>
            </value>
            <value>
                <fullName>CentOS 6.6</fullName>
            </value>
            <value>
                <fullName>CentOS 6.7</fullName>
            </value>
            <value>
                <fullName>CentOS 6.8</fullName>
            </value>
            <value>
                <fullName>CentOS 6.9</fullName>
            </value>
            <value>
                <fullName>CentOS 6.10</fullName>
            </value>
            <value>
                <fullName>CentOS 7.6</fullName>
            </value>
            <value>
                <fullName>CentOS 7.7</fullName>
            </value>
            <value>
                <fullName>CentOS 7.8</fullName>
            </value>
            <value>
                <fullName>CentOS 7.9</fullName>
            </value>
            <value>
                <fullName>SUSE Linux Enterprise Server 11</fullName>
            </value>
            <value>
                <fullName>Not-Listed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>