force-app/main/default/objects/Instance_Details__c/fields/Customer_Researcher_Email__c.field-meta.xml
<CustomField>
    <fullName>Customer_Researcher_Email__c</fullName>
    <description>Email of CRM module</description>
    <label>Customer Researcher Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>