force-app/main/default/objects/Instance_Details__c/fields/Database_Name__c.field-meta.xml
<CustomField>
    <fullName>Database_Name__c</fullName>
    <description>Primary database name</description>
    <label>Database Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>