force-app/main/default/objects/Instance_Details__c/fields/Database_Port__c.field-meta.xml
<CustomField>
    <fullName>Database_Port__c</fullName>
    <description>Primary database port</description>
    <label>Database Port</label>
    <length>10</length>
    <type>Text</type>
</CustomField>