force-app/main/default/objects/Instance_Details__c/fields/glsai_home_directory__c.field-meta.xml
<CustomField>
    <fullName>glsai_home_directory__c</fullName>
    <description>Home directory of &quot;glsai&quot; linux system user</description>
    <label>glsai home directory</label>
    <length>50</length>
    <type>Text</type>
</CustomField>