force-app/main/default/objects/Instance_Details__c/fields/glsai_password__c.field-meta.xml
<CustomField>
    <fullName>glsai_password__c</fullName>
    <description>Password of &quot;glsftp&quot; linux system user</description>
    <label>glsai password</label>
    <length>170</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>