force-app/main/default/objects/Instance_Details__c/fields/glsftp_Username__c.field-meta.xml
<CustomField>
    <fullName>glsftp_Username__c</fullName>
    <description>Username of &quot;glsftp&quot; linux system user</description>
    <label>glsftp Username</label>
    <length>20</length>
    <type>Text</type>
</CustomField>