force-app/main/default/objects/Instance_Details__c/fields/Install_Admin_Email__c.field-meta.xml
<CustomField>
    <fullName>Install_Admin_Email__c</fullName>
    <description>System generated emails sent to this address</description>
    <label>Install Admin Email</label>
    <length>100</length>
    <type>Text</type>
</CustomField>