force-app/main/default/objects/Instance_Details__c/fields/Instance_Type__c.field-meta.xml
<CustomField>
    <fullName>Instance_Type__c</fullName>
    <description>Denoted type of license</description>
    <label>Instance Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CRM Hosted (illumina)</fullName>
            </value>
            <value>
                <fullName>CRM Hosted (Life)</fullName>
            </value>
            <value>
                <fullName>CRM+ Hosted</fullName>
            </value>
            <value>
                <fullName>Silver Hosted</fullName>
            </value>
            <value>
                <fullName>Gold Hosted</fullName>
            </value>
            <value>
                <fullName>Production On Premise</fullName>
            </value>
            <value>
                <fullName>Test on Premise</fullName>
            </value>
            <value>
                <fullName>Test Hosted</fullName>
            </value>
            <value>
                <fullName>Pilot Hosted</fullName>
            </value>
            <value>
                <fullName>Pilot on Premise</fullName>
            </value>
            <value>
                <fullName>Multi-Tenant Server</fullName>
            </value>
            <value>
                <fullName>Enterprise Cloud</fullName>
            </value>
            <value>
                <fullName>Professional Cloud</fullName>
            </value>
            <value>
                <fullName>Limited Proof of Concept</fullName>
            </value>
            <value>
                <fullName>Customer Demo</fullName>
            </value>
            <value>
                <fullName>Internal Demo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>