force-app/main/default/objects/Instance_Details__c/fields/Lab_Manager_Contact__c.field-meta.xml
<CustomField>
    <fullName>Lab_Manager_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contact from Lab</description>
    <label>Lab Manager Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Instance Details (Lab Manager Contact)</relationshipLabel>
    <relationshipName>Instance_Details1</relationshipName>
    <type>Lookup</type>
</CustomField>