force-app/main/default/objects/Instance_Details__c/fields/LabLink_Database_Name__c.field-meta.xml
<CustomField>
    <fullName>LabLink_Database_Name__c</fullName>
    <description>Lab link to Database Name</description>
    <label>LabLink Database Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>