force-app/main/default/objects/Instance_Details__c/fields/Max_Elastic_Search_Memory__c.field-meta.xml
<CustomField>
    <fullName>Max_Elastic_Search_Memory__c</fullName>
    <description>RAM alocated to Elastic search service</description>
    <label>Max Elastic Search Memory</label>
    <length>100</length>
    <type>Text</type>
</CustomField>