force-app/main/default/objects/Instance_Details__c/fields/Max_JBoss_RAM__c.field-meta.xml
<CustomField>
    <fullName>Max_JBoss_RAM__c</fullName>
    <description>RAM alocated to Jboss service</description>
    <label>Max JBoss RAM</label>
    <length>10</length>
    <type>Text</type>
</CustomField>