force-app/main/default/objects/Instance_Details__c/fields/MixPanel_Installed__c.field-meta.xml
<CustomField>
    <fullName>MixPanel_Installed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is the MixPanel app installed</description>
    <label>MixPanel Installed?</label>
    <type>Checkbox</type>
</CustomField>