force-app/main/default/objects/Instance_Details__c/fields/Success_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Success_Criteria__c</fullName>
    <description>Benchmarks for success</description>
    <label>Success Criteria</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>