force-app/main/default/objects/Instance_Details__c/fields/Tenant_Database_Host_Name__c.field-meta.xml
<CustomField>
    <fullName>Tenant_Database_Host_Name__c</fullName>
    <description>Tenant-lookup database hostname/IP</description>
    <label>Tenant Database Host Name</label>
    <length>130</length>
    <type>Text</type>
</CustomField>