force-app/main/default/objects/Instance_Details__c/fields/Tenant_Database_Name__c.field-meta.xml
<CustomField>
    <fullName>Tenant_Database_Name__c</fullName>
    <description>Tenant-lookup database name</description>
    <label>Tenant Database Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>