force-app/main/default/objects/Instance_Details__c/recordTypes/Instance_Details.recordType-meta.xml
<RecordType>
    <fullName>Instance_Details</fullName>
    <active>true</active>
    <label>Instance Details</label>
</RecordType>