force-app/main/default/objects/Instance_Details__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Instance_Type__c</columns>
    <columns>Account__c</columns>
    <columns>Opportunity__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>